Update bookshelves sections. Add padding and margins

--- a/book-library.html
+++ b/book-library.html
@@ -12,18 +12,18 @@
 <body>
 		
 	<header class="header">
-		<span class="header__logo"><a href="#">myLogo</a></span>
+		<span class="header__logo"><a href="#">myLIB</a></span>
 		<nav>
 			<ul class="header__navbar">
 				<li><a href="#">About</a></li>
 				<li><a target="_blank" href="https://github.com/ahoymarcus">GitHub</a></li>
-				<li><a target="_blank" href="https://nextjs-myjs-tech-blog.vercel.app/">myTechBlog</a></li>
-				<li><a target="_blank" href="https://redux-reactjs-personal-portfolio-webpage-version-2.netlify.app/">myPortfolio</a></li>
+				<li><a target="_blank" href="https://nextjs-myjs-tech-blog.vercel.app/">JSBlog</a></li>
+				<li><a target="_blank" href="https://redux-reactjs-personal-portfolio-webpage-version-2.netlify.app/">Portfolio</a></li>
 			</ul>
 		</nav>
 		
 	</header>
-	<hr class="shelf-support" />
+	<hr class="hr-shelf-support" />
 	
 	
 	
@@ -111,7 +111,7 @@
 	
 
 	
-	<hr class="shelf-support" />
+	<hr class="hr-shelf-support" />
 	<footer class="footer">
 		<span class="footer__link"><a target="_blank" href="https://www.linkedin.com/in/marcus-vinicius-richa-183104199/">Linkedin</a></span>
 		<span class="footer__description">Marcus Richa - Web Developer</span>
