Create showBookList() and start to assemble each html node from list

--- a/book-library.html
+++ b/book-library.html
@@ -105,7 +105,9 @@
 			
 			<section class="booklist-partition" >
 				<div class="shelves booklist-shelf" >
-					<ul>
+					<ul id="booklist" >
+						
+						<!--	
 						<li class="book" >
 							<img class="div-color" src="./public/images/icons8-book-64.png" alt="books icon" />
 							<div>
@@ -162,6 +164,8 @@
 								</p>
 							</div>
 						</li>
+						
+						-->
 					</ul>
 				</div>
 			</section>
