Change id-and-for names in label-checkbox. Finish toggle book-read (has some app-state problems)

--- a/book-library.html
+++ b/book-library.html
@@ -89,10 +89,10 @@
 							/>
 						</label>
 					
-						<label for="is-read">
+						<label for="is-read-onform">
 							<input 
 								type="checkbox"
-								id="is-read" 
+								id="is-read-onform" 
 								name="is-read"
 							/>
 							Has it been read already?
