Change bookcard element from checkbox to span. Create clearFormSheet()

--- a/book-library.html
+++ b/book-library.html
@@ -92,7 +92,7 @@
 						<label for="is-read-onform">
 							<input 
 								type="checkbox"
-								id="is-read-onform" 
+								id="is-read" 
 								name="is-read"
 							/>
 							Has it been read already?
