Update printMsg(), and create checkBookNote() and removeBookfromLibrary()

--- a/book-library.html
+++ b/book-library.html
@@ -15,7 +15,7 @@
 		<span class="header__logo"><a href="#">myLIB</a></span>
 		<nav class="header__nav">
 			<ul class="header__navbar">
-				<li><a href="#">About</a></li>
+				<li id="about-section"><a href="#msg-board">About</a></li>
 				<li><a target="_blank" href="https://github.com/ahoymarcus">GitHub</a></li>
 				<li><a target="_blank" href="https://nextjs-myjs-tech-blog.vercel.app/">JSBlog</a></li>
 				<li><a target="_blank" href="https://redux-reactjs-personal-portfolio-webpage-version-2.netlify.app/">Portfolio</a></li>
