Finish new layout for bookshelf section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<div class="description-partition__ornament" ></div>
 				
 				<div id="description-partition__about" class="description-partition__about-msg">
-				<a  href="#hidden-message-board" >About</a>
+				<a  href="#" >About</a>
 			</div>
 			</div>
 		</section>
@@ -59,7 +59,7 @@
 		<div id="hidden-message-board" class="message-board"></div>
 		
 		
-		
+		<div class="book-partitions-container">
 			<section class="form-partition" >
 				<div class="shelves form-partition__shelf" >		
 					<h4 class="form-partition__desc" >Let's add some amazing new books!</h4>
@@ -128,7 +128,7 @@
 				
 			</section>
 	
-		
+		</div>
 	</main>
 	
 	
