Restructure grid system for medium-large layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 			
 </head>
 <body>
-		
+	
+	
 	<header class="header">
 		<span class="header__logo"><a href="#">LOGO</a></span>
 		<nav class="header__nav">
@@ -26,12 +27,12 @@
 	
 	<div class="div-support-top"></div>
 	
+	
 	<div class="div-ornament-top" ></div>
 	
+	<main class="main-container" >
 	
-	<main>
-	
-		<div class="top-grid-container">
+		<div class="container">
 			<section class="description-partition" >
 				<div class="shelves description-partition__shelf" >
 					<h1 class="description-partition__app-title">JavaScript <span>Bookshelf</span></h1>
@@ -42,6 +43,7 @@
 				</div>
 				</div>
 			</section>
+
 
 			
 			<div  class="book-stack" >
@@ -54,13 +56,13 @@
 				<div class="book-stack__ornament2" ></div>
 				<div id="third-ornament" class="book-stack__ornament3" ></div>
 			</div> 
-		</div>
+
 		
 		
-		<div id="hidden-message-board" class="message-board"></div>
+			<div id="hidden-message-board" class="message-board"></div>
 		
 		
-		<div class="book-partitions-container">
+		
 			<section class="form-partition" >
 				<div class="shelves form-partition__shelf" >		
 					<h4 class="form-partition__desc" >Let's add some amazing new books!</h4>
@@ -104,7 +106,7 @@
 					<button id="add-book" class="form-partition__btn" >Add Book</button>
 				</div>
 			</section>
-		
+		</div>
 			
 			<section class="booklist-partition" >
 				
@@ -129,7 +131,7 @@
 				
 			</section>
 	
-		</div>
+		
 	</main>
 	
 	
