Change Books methods name. Create BookDesc model and html element

--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
 					</li>
 					-->
 				</div>
+				
+				<div class="booklist-partition__book-desc">
+					Click on the books to get their descriptions!
+				</div>
 			
 		</section>
 	
