--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				</div>
 				
 				<div class="booklist-partition__book-desc">
-					Click on the books to get their descriptions!
+					<h3>Click on the books to get their descriptions!</h3>
 				</div>
 			
 		</section>
