Update Booklistcomponent with desc-btn. Add eventlisteners for desc-btn. Show test book description

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					-->
 				</div>
 				
-				<div class="booklist-partition__book-desc">
+				<div class="booklist-partition__book-desc" id="book-desc" >
 					<h3>Click on the books to get their descriptions!</h3>
 				</div>
 			
