Add SelectedBook component with html and css

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 			<div id="hidden-message-board" class="message-board"></div>
 		
 		
+			<div class="current-book">
+				<p class="current-book__intro">Currently Selected Book</p>
+				<div class="current-book__book"></div>
+				<p class="current-book__btn">edit</p>
+			</div>
 		
 			<section class="form-partition" >
 				<div class="shelves form-partition__shelf" >		
