Finish new UI structure with search input form

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 			</section>
 
 
-			
-			<fieldset>
-				<legend>Search the catalog:</legend>
-				<label for="stitle">Title:</label>
-				<input type="text" id="stitle" name="stitle" />
-			</fieldset>
-
+			<section class="search-form">
+				<fieldset>
+					<legend class="search-form__legend">Search the catalog</legend>
+					<label class="search-form__label" for="stitle">Title:</label>
+					<input class="search-form__input" type="text" id="stitle" name="stitle" />
+				</fieldset>
+			</section>	
 		
 		
 			<div id="hidden-message-board" class="message-board"></div>
