Add event listener to search book element and set basic regex match

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 
 			<section class="search-form">
 				<fieldset>
-					<legend class="search-form__legend">Search the catalog</legend>
+					<div class="search-form__description">
+						<legend class="search-form__legend">Search the Catalog</legend>
+						<img class="search-form__icon" src="./public/images/icons8-search-64.png" alt="search icon" />
+					</div>
 					<label class="search-form__label" for="stitle">Title:</label>
 					<input class="search-form__input" type="text" id="stitle" name="stitle" />
 				</fieldset>
