Finish basic search book title feature

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 			</section>	
 		
 		
-			<div id="hidden-message-board" class="message-board"></div>
+			<div id="hidden-message-board" class="message-board">
+			
+			</div>
 			
 		
 			<section class="form-partition" >
